# Online-hiring-system

./: README.md  pyproject.toml
backend/: run.py
backend/app/: __init__.py  database.py  test.py
backend/app/ENVIRONMENT/: means_resume.pkl  vectorizer.pkl
backend/app/api/: database.py  filter_job.py  post_application.py
backend/app/services/: processing_resume.py  test.py
backend/app/static/: style.css
backend/app/templates/: base.html  hello.html  login.html
backend/app/upload_resumes/: To-do_list.txt
backend/data_exploration/: DataExploration.ipynb
postgresql/: SQL.sql  createTable.sql  insertTable.sql  python.py
website/: README.md  apply.html  form.html  index.html  style.css
website/scripts/: filter_job.js
